@@ -1,5 +1,13 @@
 2006-04-02 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* include/Win_GParted.h,
+	  src/Win_GParted.cc: override Gtk::Window::on_show instead of
+	  connecting to signal_show()
+	* include/Dialog_Filesystems.h,
+	  src/Dialog_Filesystems.cc: added columns 'detect' and 'read'
+
+2006-04-02 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* include/Utils.h,
 	  src/Utils.cc: added convenience function
 	* src/DialogManageFlags.cc,
